@@ -130,6 +130,7 @@ The following functions from the C library are made available as
 <C>fork</C>,
 <C>fstat</C>,
 <C>getcwd</C>,
+<C>getenv</C>,
 <C>gethostbyname</C>,
 <C>gethostname</C>,
 <C>getpid</C>,
@@ -165,12 +166,14 @@ The following functions from the C library are made available as
 <C>select</C>,
 <C>send</C>,
 <C>sendto</C>,
+<C>setenv</C>,
 <C>setsockopt</C>,
 <C>socket</C>,
 <C>stat</C>,
 <C>symlink</C>,
 <C>telldir</C>,
 <C>unlink</C>,
+<C>unsetenv</C>,
 <C>write</C>. <P/>
 
 Use the <C>man</C> command in your shell to get information about these
@@ -498,6 +501,17 @@ the same entries than a <C>struct stat</C>.
 <Description>
 Returns the current working directory.
 For details see <Q><C>man 3 getcwd</C></Q>.
+</Description>
+</ManSection>
+
+<ManSection>
+<Func Name="IO_getenv" Arg="name"
+      Comm="Return the value of an environment variable."/>
+<Returns> a string or <K>fail</K> </Returns>
+<Description>
+Return the current value of the environment variable <A>name</A>.
+If the variable is not in the current environment, <C>fail</C> is returned.
+For details see <Q><C>man 3 getenv</C></Q>.
 </Description>
 </ManSection>
 
@@ -899,6 +913,17 @@ that no 7th argument is necessary.
 </ManSection>
 
 <ManSection>
+<Func Name="IO_setenv" Arg="name, value, overvwrite"
+      Comm="Set the value of an environment variable."/>
+<Returns> <K>true</K> or <K>fail</K> </Returns>
+<Description>
+Set the current value of the environment variable <A>name</A> to <A>value</A>
+if it has either not been set before, or <A>overwrite</A> is <C>true</C>.
+For details see <Q><C>man 3 setenv</C></Q>.
+</Description>
+</ManSection>
+
+<ManSection>
 <Func Name="IO_setsockopt" Arg="fd, level, optname, optval"
       Comm="Sets a socket option."/>
 <Returns> <K>true</K> or <K>fail</K> </Returns>
@@ -962,6 +987,16 @@ required as we have only one <C>DIR</C> struct on the C level.
 <Description>
 Delete a name and possibly the file it refers to.
 For details see <Q><C>man 2 unlink</C></Q>.
+</Description>
+</ManSection>
+
+<ManSection>
+<Func Name="IO_unsetenv" Arg="name"
+      Comm="Remove an environment variable."/>
+<Returns> <K>true</K> or <K>fail</K> </Returns>
+<Description>
+Remove the environment variable <A>name</A>.
+For details see <Q><C>man 3 unsetenv</C></Q>.
 </Description>
 </ManSection>
 
